Fixed image carousel
Made two version of image carousel work without js.
1. Working well but not responsive
2. Somewhat responsive, but can only fit four images atm

--- a/P02_sites/css/main-nonresponsive.css
+++ b/P02_sites/css/main-nonresponsive.css
@@ -318,135 +318,63 @@ th{
 }
 
 /*-------image gallery----*/
-#slider {
-	margin: 0 auto;
-	width: 700px;
-	max-width: 100%;
+
+.slider-holder{
+	width: 600px;
+	height: 430px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 0px;
 	text-align: center;
-}
-#slider input[type=radio] {
-	display: none;
-}
-#slider label {
-	cursor:pointer;
-	text-decoration: none;
-}
-#slides {
-	padding: 10px;
-	border: 3px solid #ccc;
-	background: #fff;
-	position: relative;
-	z-index: 1;
-}
-#overflow {
-	width: 100%;
 	overflow: hidden;
 }
-#slide1:checked ~ #slides .inner {
-	margin-left: 0;
-}
-#slide2:checked ~ #slides .inner {
-	margin-left: -100%;
-}
-#slide3:checked ~ #slides .inner {
-	margin-left: -200%;
-}
-#slide4:checked ~ #slides .inner {
-	margin-left: -300%;
+
+.image-holder{
+	width: 3700px;
+	height: 430px;
+	clear: both;
+	position: relative;
+
+	-webkit-transition: left 2s;
+	-moz-transition: left 2s;
+	-o-transition: left 2s;
+	transition: left 2s;
 }
 
-#slides .inner {
-	transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-	width: 400%;
-	line-height: 0;
-	height: 300px;
-}
-#slides .slide {
-	width: 25%;
-	float:left;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
-	color: #fff;
-}
-
-.slider-img{
-	width: 100%;
-}
-                                                  
-#controls {
-	margin: -180px 0 0 0;
-	width: 100%;
-	height: 50px;
-	z-index: 3;
+.slider-image{
+	float: left;
+	width:600px;
+	height:auto;
+	margin: 0px;
+	padding: 0px;
 	position: relative;
 }
-#controls label {
-	transition: opacity 0.2s ease-out;
-	display: none;
-	width: 50px;
-	height: 50px;
-	opacity: .4;
-}
-#controls label:hover {
-   opacity: 1;
-}
-#slide1:checked ~ #controls label:nth-child(2),
-#slide2:checked ~ #controls label:nth-child(3),
-#slide3:checked ~ #controls label:nth-child(4),
-#slide4:checked ~ #controls label:nth-child(1) {
-   background: url(https://image.flaticon.com/icons/svg/130/130884.svg) no-repeat;
-   float:right;
-   margin: 0 -50px 0 0;
-   display: block;
-}
-#slide1:checked ~ #controls label:nth-last-child(2),
-#slide2:checked ~ #controls label:nth-last-child(3),
-#slide3:checked ~ #controls label:nth-last-child(4),
-#slide4:checked ~ #controls label:nth-last-child(1) {
-   background: url(https://image.flaticon.com/icons/svg/130/130882.svg) no-repeat;
-   float:left;
-   margin: 0 0 0 -50px;
-   display: block;
-}
-#bullets {
-   margin: 150px 0 0;
-   text-align: center;
-}
-#bullets label {
-   display: inline-block;
-   width: 10px;
-   height: 10px;
-   border-radius:100%;
-   background: #ccc;
-   margin: 0 10px;
-}
-#slide1:checked ~ #bullets label:nth-child(1),
-#slide2:checked ~ #bullets label:nth-child(2),
-#slide3:checked ~ #bullets label:nth-child(3),
-#slide4:checked ~ #bullets label:nth-child(4) {
-   background: #444;
-}
-@media screen and (max-width: 700px) {
-   #slide1:checked ~ #controls label:nth-child(2),
-   #slide2:checked ~ #controls label:nth-child(3),
-   #slide3:checked ~ #controls label:nth-child(4),
-   #slide4:checked ~ #controls label:nth-child(1),
-   #slide1:checked ~ #controls label:nth-last-child(2),
-   #slide2:checked ~ #controls label:nth-last-child(3),
-   #slide3:checked ~ #controls label:nth-last-child(4),
-   #slide4:checked ~ #controls label:nth-last-child(1) {
-      margin: 0;
-   }
-   #slides {
-      max-width: calc(100% - 140px);
-      margin: 0 auto;
-   }
-}
+
+#slider-image-1:target ~ .image-holder{ left: 0px; }
+
+#slider-image-2:target ~ .image-holder{ left: -600px; }
+
+#slider-image-3:target ~ .image-holder{ left: -1200px; }
+
+#slider-image-4:target ~ .image-holder{ left: -1800px; }
+
+#slider-image-5:target ~ .image-holder{ left: -2400px; }
+
+#slider-image-6:target ~ .image-holder{ left: -3000px; }
 
 
+.button-holder{
+	position: relative;
+	top: -20px;
+}
 
+.slider-change{
+	display: inline-block;
+	height: 10px;
+	width: 10px;
+	border-radius: 5px;
+	background-color: #E28E83;
+}
 
 
 /**** Shoes size selector ****/
